--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Windows ISOs & Product Keys Collection</h1>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Windows ISOs &amp; Product Keys Collection</h1>
+    </header>
 
-  <nav>
-    <button onclick="window.location.href='isos.html'">ISOs</button>
-    <button onclick="window.location.href='productkeys.html'">Product Keys</button>
+    <nav>
+      <button onclick="window.location.href='isos.html'">ISOs</button>
+      <button onclick="window.location.href='productkeys.html'">Product Keys</button>
 
-    <label for="themeSelect">Theme:</label>
-    <select id="themeSelect">
-      <option value="">Default</option>
-      <option value="xp">XP</option>
-      <option value="vista">Vista</option>
-      <option value="longhorn">Longhorn</option>
-      <option value="win11">Windows 11</option>
-    </select>
-  </nav>
+      <label for="themeSelect">Theme:</label>
+      <select id="themeSelect">
+        <option value="">Default</option>
+        <option value="xp">XP</option>
+        <option value="vista">Vista</option>
+        <option value="longhorn">Longhorn</option>
+        <option value="win11">Windows 11</option>
+      </select>
+    </nav>
 
-  <main>
-    <p>Welcome to the ultimate Windows ISOs and product keys archive.</p>
-  </main>
+    <main>
+      <p>Welcome to the ultimate Windows ISOs and product keys archive.  
+         Explore various Windows versions, including betas and releases,  
+         and find product keys easily with our intuitive search and theme switcher.</p>
+    </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
