--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Windows ISOs and Product Keys</title>
+  <title>Windows ISOs & Product Keys</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
       <h1>Windows ISOs &amp; Product Keys Collection</h1>
     </header>
 
-    <nav>
+    <nav class="home-nav">
       <button onclick="window.location.href='isos.html'">ISOs</button>
       <button onclick="window.location.href='productkeys.html'">Product Keys</button>
 
